--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@nuxtjs/dotenv": "^1.4.2",
-    "contentful": "^10.6.16"
+    "@pinia/nuxt": "^0.5.1",
+    "contentful": "^10.6.16",
+    "pinia": "^2.1.7"
   }
 }
