--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.5.1",
     "contentful": "^10.6.16",
+    "contentful-rich-text-vue-renderer": "^3.1.0",
     "pinia": "^2.1.7"
   }
 }
