--- a/package.json
+++ b/package.json
@@ -9,15 +9,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "devDependencies": {
-    "@nuxt/image": "^1.2.0",
-    "autoprefixer": "^10.4.16",
-    "nuxt": "^3.9.1",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "vue": "^3.4.10",
-    "vue-router": "^4.2.5"
-  },
+  "devDependencies": {},
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
@@ -25,6 +17,13 @@
     "@pinia/nuxt": "^0.5.1",
     "contentful": "^10.6.16",
     "contentful-rich-text-vue-renderer": "^3.1.0",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "@nuxt/image": "^1.2.0",
+    "autoprefixer": "^10.4.16",
+    "nuxt": "^3.9.1",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "vue": "^3.4.10",
+    "vue-router": "^4.2.5"
   }
 }
