--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "devDependencies": {},
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@nuxt/image": "^1.2.0",
     "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.5.1",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.8",
     "contentful": "^10.6.16",
     "contentful-rich-text-vue-renderer": "^3.1.0",
-    "pinia": "^2.1.7",
-    "@nuxt/image": "^1.2.0",
-    "autoprefixer": "^10.4.16",
     "nuxt": "^3.9.1",
+    "pinia": "^2.1.7",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "vue": "^3.4.10",
