--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "contentful": "^10.6.16",
     "contentful-rich-text-vue-renderer": "^3.1.0",
     "nuxt": "^3.9.1",
+    "nuxt-log4nuxt": "^1.0.3",
     "pinia": "^2.1.7",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
